Rules. First Question. CSS.

--- a/index.html
+++ b/index.html
@@ -45,17 +45,25 @@
             <div class="quiz-options">
                 <div class="option">
                     <span>Hyper Text Manual Links</span>
-                    <div class="icon tick"><i class="fas fa-check"></i></div>
+                </div>
+                <div class="option">
+                    <span>Hyper Text Markup Language</span>
                 </div>
                 <div class="option">
                     <span>Hyper Text Multi Lingual</span>
                 </div>
                 <div class="option">
-                    <span>Hyper Text Markup Language</span>
-                    <div class="icon cross"><i class="fas fa-times"></i></div>
+                    <span>Hyper Text Many Linx</span>
                 </div>
-            </div>
+            </div>    
         </section>
+
+        <footer>
+            <div class="total-score">
+                <span><p>2</p> of <p>5</p> Questions</span>
+            </div>
+            <button class="next-btn">Next</button>
+        </footer>
     </div>
 
   <script src="script.js"></script>
