Finished CSS. New JS. Reorganized folders.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
         <div class="buttons">
             <button class="quit">Exit Quiz</button>
-            <button class="restart">Continue</button>
+            <button class="continue">Continue</button>
         </div>
     </div>
 
@@ -66,6 +66,18 @@
         </footer>
     </div>
 
-  <script src="script.js"></script>
+    <div class="quiz-score">
+        <div class="done-text">Quiz Complete</div>
+        <div class="score-text">
+            <span> You scored <p>2</p> out of <p>5</p></span>
+        </div>
+        <div class="buttons">
+            <button class="restart">Replay Quiz</button>
+            <button class="quit">Quit Quiz</button>
+        </div>
+    </div>
+
+  <script src="script/script.js"></script>
+  <script src="script/quizQuestions.js"></script>
 </body>
 </html>
