--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button class="continue">Continue</button>
         </div>
     </div>
-
+<!--Quiz-->
     <div class="quiz-box">
         <header>
             <div class="quiz-title">Coding Quiz</div>
@@ -55,12 +55,12 @@
                 <div class="option">
                     <span>Hyper Text Many Linx</span>
                 </div>
-            </div>    
+            </div>
         </section>
-
+<!--Question Counter and Next button-->
         <footer>
-            <div class="total-score">
-                <span><p>2</p> of <p>5</p> Questions</span>
+            <div class="question-counter">
+                <!--<span><p>2</p> of <p>5</p> Questions</span> -->
             </div>
             <button class="next-btn">Next</button>
         </footer>
