Started the timer. Need to fix.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <span>What does HTML stand for?</span>
             </div>
             <div class="quiz-options">
-                <div class="option">
+                <!--<div class="option">
                     <span>Hyper Text Manual Links</span>
                 </div>
                 <div class="option">
@@ -54,7 +54,7 @@
                 </div>
                 <div class="option">
                     <span>Hyper Text Many Linx</span>
-                </div>
+                </div> -->
             </div>
         </section>
 <!--Question Counter and Next button-->
