--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="quiz-title">Coding Quiz</div>
             <div class="timer">
                 <div class="time-text">Time Remaining</div>
-                <div class="time-count">30</div>
+                <div class="time-count">20</div>
             </div>
         </header>
         <section>
@@ -69,11 +69,11 @@
     <div class="quiz-score">
         <div class="done-text">Quiz Complete</div>
         <div class="score-text">
-            <span> You scored <p>2</p> out of <p>5</p></span>
+            <!--<span> You scored <p>2</p> out of <p>5</p></span>-->
         </div>
         <div class="buttons">
             <button class="restart">Replay Quiz</button>
-            <button class="quit">Quit Quiz</button>
+            <button class="scoring">Enter Scores</button>
         </div>
     </div>
 
