Screenshots. Reorg assets file.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Coding Quiz</title>
   <meta name="description" content="Brief quiz tests basic knowledge of HTML, CSS, and Javascript.">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/style.css">
 
 </head>
 
