Initials box. Scoreboard HTML file.

--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
         <div class="score-text">
             <!--<span> You scored <p>2</p> out of <p>5</p></span>-->
         </div>
+    <p>Please enter your initials to submit your score.</p>
+        <label for="enter-score">Initials:</label>
+        <input type="text" id="enter-score" required minlength="2" maxlength="2" size="5">
         <div class="buttons">
             <button class="restart">Replay Quiz</button>
-            <button class="scoring">Enter Scores</button>
+            <button class="scoring">Enter Score</button>
         </div>
     </div>
 
